Tweaks, first project page.
Should I switch to JSON?

--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@ add favicon
             a.src = g;
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
         ga('create', 'UA-85708609-1', 'auto');
         ga('send', 'pageview');
     </script>
 </head>
 
 <body>
-    <video id="introVid" src="video/Comp%204_final.mp4" autoplay loop></video>
+    <video id="introVid" src="images/home/heroHome.mp4" autoplay loop></video>
 
     <header>
         <a href="index.html">
@@ -78,7 +77,7 @@ add favicon
                 <h2>Arirang Visualization</h2>
                 <h3>Live Interactive Concert Visuals</h3>
                 <p>Adobe Illustrator, Processing</p>
-                <!--                <a class="button">Read More</a>-->
+                <a href="arirang.html" class="button">Read More</a>
             </div>
         </article>
 
