--- a/arirang.html
+++ b/arirang.html
@@ -3,93 +3,78 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Arirang Visualization - D E Reyes</title>
+    <title>D E Reyes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" />
-
-    <!--[if lt IE 9]>
-        <link rel="stylesheet" href="css/ie.css">
-    <![endif]-->
-
+    <link rel="stylesheet" href="css/project.css" />
+    <link rel='shortcut icon' href='favicon.png' type='image/png' />
+    <script>
+        console.log('analytics');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-85708609-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body>
-    <div id="hero"></div>
-
-    <section id="00">
-        <div class="heroImg"></div>
-        <div class="heroText">
-            <br>
-            <h1>Arirang<br>Visualization</h1>
-            <h2>Live Interactive Concert Visuals</h2>
-            <br>
-            <blockquote>“Blending the past and present through music and interactive design.”</blockquote>
-            <br>
-            <p>Client: Joe Kye</p>
-            <p>Role: Coder, Visual Designer, Video Jockey</p>
-            <p>Status: Presented at the #SeedToSprout benefit concert, Spring 2016</p>
-            <p>Tools: Adobe Illustrator, Processing</p>
-            <p>Skills: Data Visualization, Generative Graphics, Graphic Design, Motion Graphics, Projection</p>
-        </div>
-    </section>
-
-
-    <section id="01">
-    </section>
-
-
-    <section id="02">
-    </section>
-
     <header>
-        <a class="navHeader project" id="00" href="index.html">Home</a>
-        <a class="navHeader" id="01" href="#00">Quick Facts</a>
-        <a class="navHeader" id="02" href="#01">Process</a>
-
-        <a id="title" class="project" href="index.html">
-            <div>
-                <h1>Darin E<br>Reyes</h1>
-                <p>Creative Coder,
-                    <br>Visual Storyteller,
-                    <br>Experiential Designer</p>
-            </div>
-            <div class="phone">
-                <h1>Darin E Reyes</h1>
-            </div>
+        <a href="index.html">
+            <h1>Darin E. Reyes</h1>
         </a>
-
+        <p>This site is under construction.</p>
     </header>
 
-    <footer>
-        <a class="navFooter" id="00" href="#01">Process</a>
-        <a class="navFooter" id="01" href="#02">More Projects</a>
-    </footer>
-
-    <!--
-<a id="title" href="index.html">
-    <div id="nonPhone">
-        <h1>Darin E<br>Reyes</h1>
-        <p>Creative Coder,
-            <br>Visual Storyteller,
-            <br>Experiential Designer</p>
+    <div id="column">
+        <div id="contentTop"></div>
+        <h1 class="year" id="year2016">20<br>16</h1>
+        <article id="project1" class="project frontenddev generativegraphics visualdesign">
+            <video src="images/arirang/projectAririang.mp4" width="500" class="projectHero" controls>
+                Your browser does not support the video tag.
+            </video>
+            <h2>Arirang Visualization</h2>
+            <h3>Live Interactive Concert Visuals</h3>
+            <p>Adobe Illustrator, Processing</p>
+            <div class="projectDesc">
+                <p>Client: Joe Kye</p>
+                <p>Role: Coder, Visual Designer, Video Jockey</p>
+                <p>Status: Presented at the #SeedToSprout benefit concert, Spring 2016</p>
+            </div>
+        </article>
+        <a id="all" class="button" href="index.html">&#60; Home</a>
     </div>
-    <div id="phone">
-        <h1>Darin E Reyes</h1>
-    </div>
-</a>
--->
 
     <!--libraries-->
+
+    <!--GSAP-->
+    <script src="libraries/TweenMax.min.js" type="text/javascript">
+    </script>
+    <script src="libraries/ScrollToPlugin.min.js" type="text/javascript"></script>
+
+    <!--ScrollMagic-->
+    <script src="libraries/ScrollMagic.min.js" type="text/javascript"></script>
+    <script src="libraries/debug.addIndicators.min.js" type="text/javascript"></script>
+    <script src="libraries/animation.gsap.min.js" type="text/javascript"></script>
+
+    <!--jQuery-->
     <script type="text/javascript" src="libraries/jquery.js"></script>
-    <script type="text/javascript" src="libraries/jquery-ui.min.js"></script>
-    <script src="libraries/p5.js" type="text/javascript"></script>
+
+    <!--p5-->
+    <script src="libraries/p5.min.js" type="text/javascript"></script>
+    <script src="libraries/p5.dom.min.js" type="text/javascript"></script>
 
     <!--my js-->
-    <script src="js/mainHome.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
-    <!--    <script src="js/sketch.js" type="text/javascript"></script>-->
-
-
+    <script src="js/scenes.js" type="text/javascript"></script>
 </body>
 
 </html>
