Fixed video issue

--- a/arirang.html
+++ b/arirang.html
@@ -37,9 +37,7 @@
         <div id="contentTop"></div>
         <h1 class="year" id="year2016">20<br>16</h1>
         <article id="project1" class="project frontenddev generativegraphics visualdesign">
-            <video src="images/arirang/projectAririang.mp4" width="500" class="projectHero" controls>
-                Your browser does not support the video tag.
-            </video>
+            <iframe class="projectHero" width="500" height="315" src="https://www.youtube.com/embed/u4dnh7r_6Wg" frameborder="0" allowfullscreen></iframe>
             <h2>Arirang Visualization</h2>
             <h3>Live Interactive Concert Visuals</h3>
             <p>Adobe Illustrator, Processing</p>
