--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <!--
 TODO
 make project pages
@@ -8,7 +9,7 @@ preload video
 add favicon
 -->
 
-<!doctype html>
+
 <html lang="en">
 
 <head>
@@ -94,7 +95,7 @@ add favicon
         </article>
 
         <article class="full explorations designresearch frontenddev generativegraphics uidesign visualdesign vrexperiencedesign writing">
-            <img src="images/home/explorations1.png" alt="AIGA Thank You cards" width="500px" height="500px">
+            <img src="images/home/explorations1.png" alt="AIGA Thank You cards" width="500" height="500">
             <h2>AIGA SF Thank You Cards</h2>
             <p>Procedurally generated to thank the judges and donors of the AIGA SF Enrichment Scholarship</p>
         </article>
