Tweaks, cleaned up js, added SS page.

--- a/arirang.html
+++ b/arirang.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>D E Reyes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/project.css" />
+    <link rel="stylesheet" href="css/projects.css" />
     <link rel='shortcut icon' href='favicon.png' type='image/png' />
     <script>
         console.log('analytics');
@@ -33,11 +33,35 @@
         <p>This site is under construction.</p>
     </header>
 
+<!--
+    <div id="column">
+    <div id="contentTop"></div>
+    <h1 class="year" id="year2016">20<br>16</h1>
+    <article id="project1" class="project frontenddev generativegraphics visualdesign">
+        <div class="projectHero">
+            <iframe class="projectHero" src="https://www.youtube.com/embed/u4dnh7r_6Wg" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <h2>Arirang Visualization</h2>
+        <h3>Live Interactive Concert Visuals</h3>
+        <p>Adobe Illustrator, Processing</p>
+        <div class="projectDesc">
+            <p>Client: Joe Kye</p>
+            <p>Role: Coder, Visual Designer, Video Jockey</p>
+            <p>Status: Presented at the #SeedToSprout benefit concert, Spring 2016</p>
+        </div>
+    </article>
+    <a id="return" class="button" href="index.html">&#60; Home</a>
+</div>
+-->
+    
     <div id="column">
         <div id="contentTop"></div>
-        <h1 class="year" id="year2016">20<br>16</h1>
-        <article id="project1" class="project frontenddev generativegraphics visualdesign">
-            <iframe class="projectHero" width="500" height="315" src="https://www.youtube.com/embed/u4dnh7r_6Wg" frameborder="0" allowfullscreen></iframe>
+        <h1 class="year">20<br>16</h1>
+        <article class="project">
+            <p class="hashtag">#PROJECTS</p>
+            <div class="projectHero">
+                <iframe class="projectHero" src="https://www.youtube.com/embed/u4dnh7r_6Wg" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+            </div>
             <h2>Arirang Visualization</h2>
             <h3>Live Interactive Concert Visuals</h3>
             <p>Adobe Illustrator, Processing</p>
@@ -46,8 +70,9 @@
                 <p>Role: Coder, Visual Designer, Video Jockey</p>
                 <p>Status: Presented at the #SeedToSprout benefit concert, Spring 2016</p>
             </div>
+            <p class="hashtag">#FrontEndDev #GenerativeGraphics #VisualDesign</p>
         </article>
-        <a id="all" class="button" href="index.html">&#60; Home</a>
+        <a id="return" class="button" href="index.html">&#60; Home</a>
     </div>
 
     <!--libraries-->
@@ -70,9 +95,9 @@
     <script src="libraries/p5.dom.min.js" type="text/javascript"></script>
 
     <!--my js-->
-    <script src="js/main.js" type="text/javascript"></script>
-    <script src="js/custom.js" type="text/javascript"></script>
-    <script src="js/scenes.js" type="text/javascript"></script>
+    <script src="js/projects.js" type="text/javascript"></script>
+    <script src="js/all.js" type="text/javascript"></script>
+    <script src="js/projectsCustom.js" type="text/javascript"></script>
 </body>
 
 </html>
