--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ add favicon
     <meta charset="UTF-8">
     <title>D E Reyes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/home.css" />
     <link rel='shortcut icon' href='favicon.png' type='image/png' />
     <script>
         console.log('analytics');
@@ -121,7 +121,7 @@ add favicon
                 <h2>SoundScapes</h2>
                 <h3>Sound Visualizers for Google Chrome and Google Cardboard</h3>
                 <p>HTML, CSS, JavaScript, Three.js, Web Audio API, Unity</p>
-                <!--                <a class="button">Read More</a>-->
+                <a href="soundscapes.html" class="button">Read More</a>
             </div>
         </article>
 
@@ -276,9 +276,10 @@ add favicon
     <script src="libraries/p5.dom.min.js" type="text/javascript"></script>
 
     <!--my js-->
-    <script src="js/main.js" type="text/javascript"></script>
-    <script src="js/custom.js" type="text/javascript"></script>
-    <script src="js/scenes.js" type="text/javascript"></script>
+    <script src="js/home.js" type="text/javascript"></script>
+    <script src="js/all.js" type="text/javascript"></script>
+    <script src="js/homeCustom.js" type="text/javascript"></script>
+    <script src="js/homeScenes.js" type="text/javascript"></script>
 </body>
 
 </html>
