Moved to JSON-based, added more process

--- a/index.html
+++ b/index.html
@@ -72,15 +72,7 @@ add favicon
 
         <h1 class="title" id="titleNew">New</h1>
 
-        <article id="project1" class="project frontenddev generativegraphics visualdesign">
-            <div class="projectHero"></div>
-            <div class="projectDesc">
-                <h2>Arirang Visualization</h2>
-                <h3>Live Interactive Concert Visuals</h3>
-                <p>Adobe Illustrator, Processing</p>
-                <a href="arirang.html" class="button">Read More</a>
-            </div>
-        </article>
+        <article class="project" projectTitle="Arirang Visualization"></article>
 
         <h1 class="year" id="year2016">20<br>16</h1>
 
@@ -115,83 +107,87 @@ add favicon
             <p>Guest Lecturer on Design for Social Change</p>
         </article>
 
-        <article id="project2" class="project designresearch frontenddev generativegraphics uidesign visualdesign vrexperiencedesign writing">
-            <div class="projectHero"></div>
-            <div class="projectDesc">
-                <h2>SoundScapes</h2>
-                <h3>Sound Visualizers for Google Chrome and Google Cardboard</h3>
-                <p>HTML, CSS, JavaScript, Three.js, Web Audio API, Unity</p>
-                <a href="soundscapes.html" class="button">Read More</a>
-            </div>
-        </article>
+        <article class="project" projectTitle="SoundScapes II" id="project1"></article>
+
+        <article class="project" projectTitle="SoundScapes I" id="project1"></article>
 
         <article class="left recog designresearch frontenddev generativegraphics uidesign visualdesign writing">
             <h3>UC Davis Undergraduate Research Conference</h3>
             <p>Presenter with Abstract Published</p>
         </article>
 
-        <article id="project3" class="project designresearch frontenddev generativegraphics uidesign visualdesign">
-            <div class="projectHero"></div>
-            <div class="projectDesc">
-                <h2>DisQuiet</h2>
-                <h3>Musical Relaxation App Prototype</h3>
-                <p>Processing</p>
-                <!--                <a class="button">Read More</a>-->
-            </div>
-        </article>
+        <article class="project" projectTitle="DisQuiet" id="project2"></article>
 
+        <article class="project" projectTitle="Designing Harmony" id="project3"></article>
+
+        <!--
         <article id="project4" class="project designresearch writing">
             <div class="projectHero"></div>
             <div class="projectDesc">
                 <h2>Designing Harmony</h2>
                 <h3>Research / Multi-Modal Essay</h3>
-                <!--                <a class="button">Read More</a>-->
+                                <a class="button">Read More</a>
             </div>
         </article>
+-->
 
         <h1 class="year" id="year2015">20<br>15</h1>
 
+        <article class="project" projectTitle="Dark was the Night" id="project4"></article>
+
+        <!--
         <article id="project5" class="project visualdesign">
             <div class="projectHero"></div>
             <div class="projectDesc">
                 <h2>Dark was the Night</h2>
                 <h3>Projected Graphics / Photography</h3>
                 <p>Adobe Illustrator, DSLR Photography</p>
-                <!--                <a class="button">Read More</a>-->
+                                <a class="button">Read More</a>
             </div>
         </article>
+-->
 
+        <article class="project" projectTitle="AudioVisuals" id="project5"></article>
+
+        <!--
         <article id="project6" class="project frontenddev generativegraphics uidesign visualdesign">
             <div class="projectHero"></div>
             <div class="projectDesc">
                 <h2>AudioVisuals</h2>
                 <h3>Music Visualizer</h3>
                 <p>Processing</p>
-                <!--                <a class="button">Read More</a>-->
+                                <a class="button">Read More</a>
             </div>
         </article>
+-->
 
+        <article class="project" projectTitle="Easy Does It" id="project6"></article>
+
+        <!--
         <article id="project7" class="project designresearch videoproduction visualdesign">
             <div class="projectHero"></div>
             <div class="projectDesc">
                 <h2>Easy Does It</h2>
                 <h3>Projected Video</h3>
                 <p>Adobe Premiere</p>
-                <!--                <a class="button">Read More</a>-->
+                                <a class="button">Read More</a>
             </div>
         </article>
+-->
 
         <h1 class="year">20<br>14</h1>
 
-        <article id="project8" class="project visualdesign">
-            <div class="projectHero"></div>
-            <div class="projectDesc">
-                <h2>Light-Based Set Design</h2>
-                <h3>Projected Graphics / Set Design</h3>
-                <p>Adobe Illustrator, Adobe Photoshop, Google SketchUp</p>
-                <!--                <a class="button">Read More</a>-->
-            </div>
-        </article>
+        <!--
+<article id="project8" class="project visualdesign">
+    <div class="projectHero"></div>
+    <div class="projectDesc">
+        <h2>Light-Based Set Design</h2>
+        <h3>Projected Graphics / Set Design</h3>
+        <p>Adobe Illustrator, Adobe Photoshop, Google SketchUp</p>
+        <a class="button">Read More</a>
+    </div>
+</article>
+-->
 
         <article class="aboutme right">
             <h3>Moved to Davis, California</h3>
