--- a/soundscapesII.html
+++ b/soundscapesII.html
@@ -36,18 +36,21 @@
     <div id="column">
         <div id="contentTop"></div>
         <h1 class="year">20<br>16</h1>
-        <article id="project2" class="project">
+        <article class="project" projectTitle="SoundScapes I">
             <p class="hashtag">#PROJECTS</p>
-            <div class="projectHero"></div>
-            <h2>SoundScapes</h2>
-            <h3>Sound Visualizers for Google Chrome and Google Cardboard</h3>
-            <p>HTML, CSS, JavaScript, Three.js, Web Audio API, Unity</p>
-            <div class="projectDesc">
-                <!--                <p>Client</p>-->
-                <p>Role: Coder, Researcher, Visual Designer</p>
-                <p>Status: Presented at ISEA Hong Kong and “Design for Social Change” at Hong Kong Polytechnic University</p>
-            </div>
-            <p class="hashtag">#DesignResearch #FrontEndDev #GenerativeGraphics #UIDesign #VisualDesign #VRExperienceDesign #Writing</p>
+        </article>
+        <article>
+            <br>
+            <p>
+                SoundScapes was an experiment in interactive design skills, artistic explorations, and User Experience (UX) research techniques. The project was inspired by Buddhism, biocentrism, and indie rock.
+            </p>
+            <p>
+                Version 1, completed in Winter 2016, was built to visualize voice and ambient noise in Google Chrome, using HTML, CSS, JavaScript, Web Audio API, and Three.js.
+            </p>
+            <p>
+                Version 2, which is currently in progress, had the same goals but is being developed for Google Cardboard through the Unity game engine.
+            </p>
+            <h2>Process</h2>
         </article>
         <a id="return" class="button" href="index.html">&#60; Home</a>
     </div>
