added twitter link to fishyflop page

--- a/fishyflop.html
+++ b/fishyflop.html
@@ -7,6 +7,7 @@
     <title>Fishy Flop</title>
     <link rel="stylesheet" href="fishyflop-css/bootstrap.min.css">
     <link rel="stylesheet" href="fishyflop-css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="fishyflop-css/app.css">
 </head>
 
@@ -49,6 +50,7 @@
                     <br>
                     <p>It’s like QWOP meets Angry Birds meets not being able to breathe air.</p>
                     <p>It’s currently in closed beta on Google Play.</p>
+                    <p><a>Follow us on Twitter <i class="fa fa-twitter"></i></a></p>
                 </div>
             </div>
         </section>
