changed fishyflop structure, added social links

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ add favicon
     <meta charset="UTF-8">
     <title>D E Reyes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/home.css" />
     <link rel='shortcut icon' href='favicon.png' type='image/png' />
     <script>
@@ -43,7 +44,11 @@ add favicon
         <a href="index.html">
             <h1>Darin E. Reyes</h1>
         </a>
-        <p>This site is under construction.</p>
+        <p>This site is under construction.
+            <a href="https://twitter.com/dereyesdesign" alt="Facebook"><i class="fa fa fa-facebook-official"></i></a>
+            <a href="https://twitter.com/dereyesdesign" alt="Instagram"><i class="fa fa fa-instagram"></i></a>
+            <a href="https://twitter.com/dereyesdesign" alt="Twitter"><i class="fa fa-twitter"></i></a>.
+        </p>
         <nav>
             <a id="all" class="button">#All</a>
             <a id="work" class="button">#Work</a>
