--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fishy Flop</title>
-    <link rel="stylesheet" href="fishyflop-css/bootstrap.min.css">
-    <link rel="stylesheet" href="fishyflop-css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="fishyflop-css/app.css">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                     <li class="col-sm-2">
                         <a href="#engage">Sign Up</a>
                     </li>
-                    <img class="col-sm-2" src="fishyflop-images/logo.png" alt="logo">
+                    <img class="col-sm-2" src="images/logo.png" alt="logo">
                     <li class="col-sm-2">
                         <a href="#team">The Team</a>
                     </li>
@@ -50,7 +50,7 @@
                     <br>
                     <p>It’s like QWOP meets Angry Birds meets not being able to breathe air.</p>
                     <p>It’s currently in closed beta on Google Play.</p>
-                    <p><a>Follow us on Twitter <i class="fa fa-twitter"></i></a></p>
+                    <p><a href="https://twitter.com/fishyflopteam">Follow us on Twitter <i class="fa fa-twitter"></i></a></p>
                 </div>
             </div>
         </section>
@@ -59,7 +59,7 @@
             <!--            <div class="col-sm-10 col-sm-offset-1">-->
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 card">
                 <div class="col-sm-6">
-                    <img src="fishyflop-images/dancingFish.gif" alt="App icon" width="100%">
+                    <img src="images/dancingFish.gif" alt="App icon" width="100%">
                 </div>
                 <div class="col-sm-6">
                     <h2>Sign up to be a beta tester</h2>
@@ -88,27 +88,27 @@
                     <br>
                 </div>
                 <div class="profile col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-lg-4 col-lg-offset-0">
-                    <img src="fishyflop-images/computer.png" alt="App icon" width="100%">
+                    <img src="images/computer.png" alt="App icon" width="100%">
                     <h3><a href="https://www.linkedin.com/in/brian-mah-633b39126/">Brian Mah</a></h3>
                     <p>Lead Developer</p>
                 </div>
                 <div class="profile col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-2 col-lg-4 col-lg-offset-0">
-                    <img src="fishyflop-images/counter2.png" alt="App icon" width="100%">
+                    <img src="images/counter2.png" alt="App icon" width="100%">
                     <h3><a href="https://www.linkedin.com/in/alex-jungroth-561282112/">Alex Jungroth</a></h3>
                     <p>Developer</p>
                 </div>
                 <div class="profile col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-lg-4 col-lg-offset-0">
-                    <img src="fishyflop-images/bgPaintingVincent1.png" alt="App icon" width="100%">
+                    <img src="images/bgPaintingVincent1.png" alt="App icon" width="100%">
                     <h3><a href="#">Daniel Schlesinger</a></h3>
                     <p>Developer</p>
                 </div>
                 <div class="profile col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-2 col-lg-4 col-lg-offset-0">
-                    <img src="fishyflop-images/stuff2.png" alt="App icon" width="100%">
+                    <img src="images/stuff2.png" alt="App icon" width="100%">
                     <h3><a href="https://jordanhmusic.com/">Jordan Henderson</a></h3>
                     <p>Music, Audio</p>
                 </div>
                 <div class="profile col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-lg-4 col-lg-offset-0">
-                    <img src="fishyflop-images/bgPaintingFrida.png" alt="App icon" width="100%">
+                    <img src="images/bgPaintingFrida.png" alt="App icon" width="100%">
                     <h3><a href="http://derey.es">Darin E. Reyes</a></h3>
                     <p>Visuals</p>
                 </div>
@@ -139,8 +139,8 @@
         </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="fishyflop-js/bootstrap.min.js"></script>
-    <script src="fishyflop-js/app.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
