--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ add favicon
             <h1>Darin E. Reyes</h1>
         </a>
         <p>This site is under construction.
-            <a href="https://twitter.com/dereyesdesign" alt="Facebook"><i class="fa fa fa-facebook-official"></i></a>
-            <a href="https://twitter.com/dereyesdesign" alt="Instagram"><i class="fa fa fa-instagram"></i></a>
+            <a href="http://facebook.com/dereyesdesign" alt="Facebook"><i class="fa fa fa-facebook-official"></i></a>
+            <a href="http://instagram.com/dereyesdesign" alt="Instagram"><i class="fa fa fa-instagram"></i></a>
             <a href="https://twitter.com/dereyesdesign" alt="Twitter"><i class="fa fa-twitter"></i></a>.
         </p>
         <nav>
