--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -28,7 +28,7 @@
                         <a href="#top">About</a>
                     </li>
                     <li class="col-sm-2">
-                        <a href="#engage">Sign Up</a>
+                        <a href="#engage">Download</a>
                     </li>
                     <img class="col-sm-2" src="images/logo.png" alt="logo">
                     <li class="col-sm-2">
@@ -62,7 +62,8 @@
                     <img src="images/dancingFish.gif" alt="App icon" width="100%">
                 </div>
                 <div class="col-sm-6">
-                    <h2>Sign up to be a beta tester</h2>
+                    <h2><a href="https://play.google.com/store/apps/details?id=com.WouldBeCool.FishyFlop"> Download the app from Google play</a></h2>
+                    <!--
                     <form>
                         <fieldset class="form-group">
                             <p>Your name:</p>
@@ -76,6 +77,7 @@
                         </fieldset>
                         <button type="submit" class="btn btn-default" onclick="testerSubmit()">Submit</button>
                     </form>
+-->
                 </div>
             </div>
             <!--            </div>-->
