soundscapes pages are 404ing for some reason

--- a/audiovisuals/index.html
+++ b/audiovisuals/index.html
@@ -82,7 +82,7 @@
 	<article>
 		<h2>Concept</h2>
 		<p>When I was a kid, I was fascinated by the music visualizers that I found in the Windows XP-era Media Player. When I began learning to code, I decided to try making a visualizer as well. In addition to generating .gif and video art, the project allowed me to learn about the math, electronics, physics, and music theory.</p>
-		<p>This was the first project where I explored the intersections of music, design, and code. I continued this exploration in projects such as <a href="../disquiet/index.html">DisQuiet</a>, <a href="../soundscapesI/index.html">SoundScapes I</a>, <a href="../soundscapesII/index.html">SoundScapes II</a>, <a href="../arirang/index.html">Arirang</a>, and <a href="../gato/index.html">Gato</a>.</p>
+		<p>This was the first project where I explored the intersections of music, design, and code. I continued this exploration in projects such as <a href="../disquiet/index.html">DisQuiet</a>, <a href="../soundscapes-I/index.html">SoundScapes I</a>, <a href="../soundscapes-II/index.html">SoundScapes II</a>, <a href="../arirang/index.html">Arirang</a>, and <a href="../gato/index.html">Gato</a>.</p>
 	</article>
    	<article>
    		<h2>Samples</h2>
