fixed image links

--- a/soundscapesI/index.html
+++ b/soundscapesI/index.html
@@ -86,14 +86,14 @@
 	</article>
    	<article>
    		<h2>Process</h2>
-   		<img src="../soundscapes-I/images/1.jpg" alt="Proof-of-concept: learning to generate 2D and 3D images in the browser and have them respond to a user's voice">
+   		<img src="images/1.jpg" alt="Proof-of-concept: learning to generate 2D and 3D images in the browser and have them respond to a user's voice">
    		<i class="fa fa-caret-up" aria-hidden="true"></i>
 		<p class="caption">Proof-of-concept: learning to generate 2D and 3D images in the browser and have them respond to a user's voice</p>
 		
-		<img src="../soundscapes-I/images/3.jpg" alt="The final browser-based experiment was a 3D sound visualizer inspired by images of space.">
-   		<img src="../soundscapes-I/images/4.jpg" alt="The final browser-based experiment was a 3D sound visualizer inspired by images of space.">
-   		<img src="../soundscapes-I/images/heroSoundScapes.png" alt="The final browser-based experiment was a 3D sound visualizer inspired by images of space.">
-   		<p>The final browser-based experiment was a 3D sound visualizer inspired by images of space. In <a href="../soundscapesII/index.html">SoundScapes II</a>, we continued these experiments in virtual reality.</p>
+		<img src="images/3.jpg" alt="The final browser-based experiment was a 3D sound visualizer inspired by images of space.">
+   		<img src="images/4.jpg" alt="The final browser-based experiment was a 3D sound visualizer inspired by images of space.">
+   		<img src="images/heroSoundScapes.png" alt="The final browser-based experiment was a 3D sound visualizer inspired by images of space.">
+   		<p>The final browser-based experiment was a 3D sound visualizer inspired by images of space. In <a href="index.html">SoundScapes II</a>, we continued these experiments in virtual reality.</p>
     </article>
     <!-- InstanceEndEditable -->
     <article>
