--- a/index.html
+++ b/index.html
@@ -47,19 +47,30 @@
 	<!-- InstanceEndEditable -->
 </head>
 <body>
-<div id="header">
-	<div>
-		<a href="index.html" id="pageName">Darin E. Reyes Design</a>
-   		<a id="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></a>
-	</div>
-   	<div>
-    	<nav id="tabs">
+<div id="header" class="shadowWhite">
+	<div id="topDesktop">
+		<div id="topMobile">
+			<a href="index.html" id="pageName">Darin E. Reyes Design</a>
+   			<a id="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></a>
+   		</div>
+   		<nav id="tabs">
         	<a sort="work" href="index.html#work">Work</a>
         	<a sort="aboutMe" href="index.html#aboutMe">About Me</a>
 <!--        <a id="resume">Resume</a>-->
         	<a sort="contact" href="index.html#contact">Contact</a>
         	<a sort="all" href="index.html#all">All</a>
     	</nav>
+	</div>
+<!--   	<div>-->
+<!--
+    	<nav id="tabs">
+        	<a sort="work" href="../index.html#work">Work</a>
+        	<a sort="aboutMe" href="../index.html#aboutMe">About Me</a>
+        <a id="resume">Resume</a>
+        	<a sort="contact" href="../index.html#contact">Contact</a>
+        	<a sort="all" href="../index.html#all">All</a>
+    	</nav>
+-->
     	<nav id="social" class="colQuarter">
         	<a href="http://facebook.com/dereyesdesign">
         		<i class="fa fa-facebook-official"></i>
@@ -71,7 +82,7 @@
         		<i class="fa fa-twitter"></i>
         	</a>
     	</nav>
-    </div>
+<!--    </div>-->
 </div>
 <div id="content">
    <section id="loading">
@@ -101,10 +112,10 @@
 		</article>
 	</section>
 	<section class="sectionTiles" id="aboutMeAnchor">
-		<h1 class="tileHome  work aboutMe">2016</h1>
+		<h1 class="tileHome  work aboutMe">20<br>16</h1>
 		<article class="tileHome aboutMe recognition ">
 			<div class="node"></div>
-			<h3>Crocker Museum of Art</h3>
+			<h3>Crocker Art Museum</h3>
 			<p>ArtSpots Artist in Residence</p>
 		</article>
 		<article class="tileHome aboutMe education ">
@@ -138,7 +149,7 @@
 		<article class="tileHome work  projectData" projectTag="disQuiet"></article>
 	</section>
 	<section class="sectionTiles">
-		<h1 class="tileHome  work">2015</h1>
+		<h1 class="tileHome  work">20<br>15</h1>
 		<article class="tileHome work  projectData" projectTag="audioVisuals"></article>
 	</section>
 	<section class="sectionTiles">
@@ -153,7 +164,7 @@
 			<p>Born in Los Angeles, California</p>
 		</article>
 	</section>
-	<section id="contactAnchor" class="sectionTiles heightWindow">
+	<section id="contactAnchor" class="sectionTiles heightWindow shadowWhite">
 		<h1 class="tileHome work aboutMe">Contact</h1>
 		<form id="gform" method="POST" class="full" action="https://script.google.com/macros/s/AKfycbw3OqF_yQ8S1gdTuYfLyZzbsuCunk3iZi0sjvdwcARh_XocHwjt/exec">
 		<fieldset>
