--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<script src="lib/ScrollMagic.min.js" type="text/javascript"></script>
     <script src="lib/animation.gsap.min.js" type="text/javascript"></script>
     <script src="lib/ScrollToPlugin.min.js" type="text/javascript"></script>
-    <script src="lib/debug.addIndicators.min.js" type="text/javascript"></script>
+    <script src="lib/jquery.drawsvg.min.js" type="text/javascript"></script>
     <script src="js/home.js" type="text/javascript"></script>
 <!--    <script src="_js/intro.js" type="text/javascript"></script>-->
 	<!-- InstanceEndEditable -->
@@ -91,7 +91,11 @@
     <!-- InstanceBeginEditable name="Content" -->
 	<!--Content here-->
 	<section id="top" class="intro heightWindow66 widthWindow">
-		<h1>Light + sound + code</h1>
+		<svg id="selfPortrait" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90 112.5"><style type="text/css">  
+	.st0{fill:none;stroke:#000000;stroke-width:3;stroke-miterlimit:10;}
+	.st1{fill:none;stroke:#000000;stroke-width:3;stroke-linecap:square;stroke-miterlimit:10;}
+</style><path class="st0" d="M67.5 47.8c3.1 0 5.6 2.5 5.6 5.6v8.4c0 3.1-2.5 5.6-5.6 5.6"/><path class="st0" d="M22.5 67.5c-3.1 0-5.6-2.5-5.6-5.6v-8.4c0-3.1 2.5-5.6 5.6-5.6"/><path class="st0" d="M19.7 45c-3.1 0-5.6-2.5-5.6-5.6v-8.4c0-3.1 2.5-5.6 5.6-5.6"/><path class="st0" d="M22.5 42.2c0-12.4 10.1-22.5 22.5-22.5s22.5 10.1 22.5 22.5l0 19.7c0 12.4-10.1 22.5-22.5 22.5S22.5 74.3 22.5 61.9L22.5 42.2z"/><path class="st0" d="M39.4 50.6c0 3.1-2.5 5.6-5.6 5.6s-5.6-2.5-5.6-5.6"/><path class="st0" d="M61.9 50.6c0 3.1-2.5 5.6-5.6 5.6s-5.6-2.5-5.6-5.6"/><path class="st1" d="M45 45v16.9"/><path class="st0" d="M22.5 22.5c0-6.2 5-11.2 11.2-11.2l25.3 0c4.7 0 8.4-3.8 8.4-8.4"/><path class="st0" d="M73.1 8.4v8.4 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.3-2.8-2.8 1.3-2.8 2.8-2.8h2.8 8.4"/><path class="st0" d="M81.6 22.5c0 0 0 5.6 0 5.6 0 6.2-5 11.2-11.2 11.2"/><path class="st0" d="M81.6 106.9L59.1 95.6V78.8"/><path class="st0" d="M30.9 78.8v16.9L8.4 106.9"/><line class="st1" x1="50.6" y1="45" x2="61.9" y2="45"/><line class="st1" x1="28.1" y1="45" x2="39.4" y2="45"/></svg>
+		<p>light + sound + code</p>
 	</section>
 	<section id="tagline" class="intro heightWindow">
 		<div>
@@ -111,8 +115,12 @@
 			</aside>
 		</article>
 	</section>
+	<section class="sectionTiles">
+		<h1 class="tileHome work">20<br>17</h1>
+		<article class="tileHome work projectData" projectTag="breathe"></article>
+	</section>
 	<section class="sectionTiles" id="aboutMeAnchor">
-		<h1 class="tileHome  work aboutMe">20<br>16</h1>
+		<h1 class="tileHome work aboutMe">20<br>16</h1>
 		<article class="tileHome aboutMe recognition ">
 			<div class="node"></div>
 			<h3>Crocker Art Museum</h3>
@@ -123,7 +131,7 @@
 			<h3>University of California, Davis</h3>
 			<p>BA in Design, Graphics /Interactive Emphasis</p>
 		</article>
-		<article class="tileHome work  projectData" projectTag="arirang"></article>
+		<article class="tileHome work projectData" projectTag="arirang"></article>
 		<article class="tileHome aboutMe recognition ">
 			<div class="node"></div>
 			<h3>AIGA SF</h3>
@@ -139,18 +147,18 @@
 			<h3>Hong Kong Polytechnic University</h3>
 			<p>Guest Lecturer on Design for Social Change</p>
 		</article>
-		<article class="tileHome work  projectData" projectTag="soundScapesII"></article>
-		<article class="tileHome work  projectData" projectTag="soundScapesI"></article>
+		<article class="tileHome work projectData" projectTag="soundScapesII"></article>
+		<article class="tileHome work projectData" projectTag="soundScapesI"></article>
 		<article class="tileHome aboutMe recognition ">
 			<div class="node"></div>
 			<h3>UC Davis Undergraduate Research Conference</h3>
 			<p>Presenter with Abstract Published</p>
 		</article>
-		<article class="tileHome work  projectData" projectTag="disQuiet"></article>
+		<article class="tileHome work projectData" projectTag="disQuiet"></article>
 	</section>
 	<section class="sectionTiles">
 		<h1 class="tileHome  work">20<br>15</h1>
-		<article class="tileHome work  projectData" projectTag="audioVisuals"></article>
+		<article class="tileHome work projectData" projectTag="audioVisuals"></article>
 	</section>
 	<section class="sectionTiles">
 		<h1 class="tileHome  aboutMe">Pre-History</h1>
