--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
 <!doctype html>
-<html lang="en">
-<!-- InstanceBegin template="/Templates/headandheader.dwt" codeOutsideHTMLIsLocked="false" -->
-
+<html lang="en"><!-- InstanceBegin template="/Templates/main.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-    <meta charset="utf-8">
-    <title>Darin E. Reyes</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Libraries-->
-    <!--jQuery-->
+	<meta charset="utf-8">
+	<title>Darin E. Reyes</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--Libraries-->
+	<!--jQuery-->
     <script type="text/javascript" src="lib/jquery-3.2.1.min.js"></script>
-    <!--Typekit-->
-    <script src="https://use.typekit.net/ftq0ggh.js"></script>
-    <script>
-        try {
-            Typekit.load({
-                async: true
-            });
-        } catch (e) {}
-    </script>
-    <!--CSS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/loading.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/main.css" />
+	<!--Typekit-->
+	<script src="https://use.typekit.net/ftq0ggh.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+  	<!--JS-->
+  	<script src="js/main.js" type="text/javascript"></script>
+  	<!--CSS-->
+   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   	<link rel="stylesheet" href="css/main.css"/>
+   	<link rel="stylesheet" href="css/loading.css"/>
+   	<link rel="stylesheet" href="css/header.css"/>
     <!--Favicon-->
-    <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png"/>
     <!--Google analytics-->
     <script>
         console.log('analytics');
@@ -42,9 +36,9 @@
         ga('create', 'UA-85708609-1', 'auto');
         ga('send', 'pageview');
     </script>
-    <!--Space for extra scripts-->
-    <!-- InstanceBeginEditable name="head" -->
-    <link rel="stylesheet" href="css/home.css" />
+	<!--Space for extra scripts-->
+	<!-- InstanceBeginEditable name="head" -->
+    <link rel="stylesheet" href="css/home.css"/>
     <script src="lib/TweenMax.min.js" type="text/javascript"></script>
     <script src="lib/ScrollMagic.min.js" type="text/javascript"></script>
     <script src="lib/animation.gsap.min.js" type="text/javascript"></script>
@@ -54,50 +48,37 @@
     <!--    <script src="_js/intro.js" type="text/javascript"></script>-->
     <!-- InstanceEndEditable -->
 </head>
-
 <body>
-    <div id="header" class="shadowWhite">
-        <div id="topDesktop">
-            <div id="topMobile">
-                <a href="index.html" id="pageName">Darin E. Reyes Design</a>
-                <a id="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></a>
-            </div>
-            <nav id="tabs">
-                <a sort="work" href="index.html#work">Work</a>
-                <a sort="aboutMe" href="index.html#aboutMe">About Me</a>
-                <!--        <a id="resume">Resume</a>-->
-                <a sort="contact" href="index.html#contact">Contact</a>
-                <a sort="all" href="index.html#all">All</a>
-            </nav>
-        </div>
-        <!--   	<div>-->
-        <!--
-    	<nav id="tabs">
-        	<a sort="work" href="../index.html#work">Work</a>
-        	<a sort="aboutMe" href="../index.html#aboutMe">About Me</a>
-        <a id="resume">Resume</a>
-        	<a sort="contact" href="../index.html#contact">Contact</a>
-        	<a sort="all" href="../index.html#all">All</a>
+<header>
+	<div id="topDesktop">
+		<div id="topMobile">
+			<a href="index.html" class="button" id="pageName">Darin E. Reyes Design</a>
+   			<a class="button" id="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></a>
+   		</div>
+   		<nav id="tabs">
+        	<a class="button" sort="work" href="index.html#work">Work</a>
+        	<a class="button" sort="aboutMe" href="index.html#aboutMe">About Me</a>
+        	<a class="button" sort="contact" href="index.html#contact">Contact</a>
+        	<a class="button" sort="all" href="index.html#all">All</a>
     	</nav>
--->
-        <nav id="social" class="colQuarter">
-            <a href="http://facebook.com/dereyesdesign">
-                <i class="fa fa-facebook-official"></i>
-            </a>
-            <a href="http://instagram.com/dereyesdesign">
-                <i class="fa fa-instagram"></i>
-            </a>
-            <a href="https://twitter.com/dereyesdesign">
-                <i class="fa fa-twitter"></i>
-            </a>
-        </nav>
-        <!--    </div>-->
-    </div>
-    <div id="content">
-        <section id="loading">
-            <img src="images/loading.gif">
-        </section>
-        <!-- InstanceBeginEditable name="Content" -->
+	</div>
+    	<nav id="social">
+        	<a class="button" href="http://facebook.com/dereyesdesign">
+        		<i class="fa fa-facebook-official"></i>
+        	</a>
+        	<a class="button" href="http://instagram.com/dereyesdesign">
+        		<i class="fa fa-instagram"></i>
+        	</a>
+        	<a class="button" href="https://twitter.com/dereyesdesign">
+        		<i class="fa fa-twitter"></i>
+        	</a>
+    	</nav>
+</header>
+<div id="content">
+   <section id="loading">
+		<img src="images/loading.gif">
+	</section>
+    <!-- InstanceBeginEditable name="Content" -->
         <!--Content here-->
         <section id="top" class="intro widthWindow">
             <blockquote class="instagram-media" data-instgrm-version="7" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:658px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
@@ -119,8 +100,8 @@
         </section>
         <section id="allAnchor"></section>
         <section class="sectionTiles" id="workAnchor">
-            <h1 class="tileHome work">New</h1>
-            <article class="tileHome work  projectData" projectTag="gato">
+            <h1 class="work">New</h1>
+            <article class="work projectData" projectTag="gato">
                 <!--
 			<aside>
 				<p><i>Gato</i> will be open at the Crocker Museum of Art in Sacramento, California until October 2017.</p>
@@ -129,64 +110,64 @@
             </article>
         </section>
         <section class="sectionTiles">
-            <h1 class="tileHome work">20<br>17</h1>
-            <article class="tileHome work projectData" projectTag="breathe"></article>
+            <h1 class="work">20<br>17</h1>
+            <article class="work projectData" projectTag="breathe"></article>
         </section>
         <section class="sectionTiles" id="aboutMeAnchor">
-            <h1 class="tileHome work aboutMe">20<br>16</h1>
-            <article class="tileHome aboutMe recognition ">
+            <h1 class="work aboutMe">20<br>16</h1>
+            <article class="aboutMe recognition">
                 <div class="node"></div>
                 <h3>Crocker Art Museum</h3>
                 <p>ArtSpots Artist in Residence</p>
             </article>
-            <article class="tileHome aboutMe education ">
+            <article class="aboutMe education ">
                 <div class="node"></div>
                 <h3>University of California, Davis</h3>
                 <p>BA in Design, Graphics /Interactive Emphasis</p>
             </article>
-            <article class="tileHome work projectData" projectTag="arirang"></article>
-            <article class="tileHome aboutMe recognition ">
+            <article class="work projectData" projectTag="arirang"></article>
+            <article class="aboutMe recognition">
                 <div class="node"></div>
                 <h3>AIGA SF</h3>
                 <p>Enrichment Scholarship</p>
             </article>
-            <article class="tileHome aboutMe recognition ">
+            <article class="aboutMe recognition">
                 <div class="node"></div>
                 <h3>International Symposium on Electronic Art</h3>
                 <p>Presenter with Abstract Published</p>
             </article>
-            <article class="tileHome aboutMe recognition ">
+            <article class="aboutMe recognition">
                 <div class="node"></div>
                 <h3>Hong Kong Polytechnic University</h3>
                 <p>Guest Lecturer on Design for Social Change</p>
             </article>
-            <article class="tileHome work projectData" projectTag="soundScapesII"></article>
-            <article class="tileHome work projectData" projectTag="soundScapesI"></article>
-            <article class="tileHome aboutMe recognition ">
+            <article class="work projectData" projectTag="soundScapesII"></article>
+            <article class="work projectData" projectTag="soundScapesI"></article>
+            <article class="aboutMe recognition ">
                 <div class="node"></div>
                 <h3>UC Davis Undergraduate Research Conference</h3>
                 <p>Presenter with Abstract Published</p>
             </article>
-            <article class="tileHome work projectData" projectTag="disQuiet"></article>
+            <article class="work projectData" projectTag="disQuiet"></article>
         </section>
         <section class="sectionTiles">
-            <h1 class="tileHome  work">20<br>15</h1>
-            <article class="tileHome work projectData" projectTag="audioVisuals"></article>
+            <h1 class="work">20<br>15</h1>
+            <article class="work projectData" projectTag="audioVisuals"></article>
         </section>
         <section class="sectionTiles">
-            <h1 class="tileHome  aboutMe">Pre-History</h1>
-            <article class="tileHome aboutMe education ">
+            <h1 class="aboutMe">Pre-History</h1>
+            <article class="aboutMe education ">
                 <div class="node"></div>
                 <h3>Los Angeles Mission College</h3>
                 <p>AA in Art</p>
             </article>
-            <article class="tileHome aboutMe life ">
+            <article class="aboutMe life ">
                 <div class="node"></div>
                 <p>Born in Los Angeles, California</p>
             </article>
         </section>
-        <section id="contactAnchor" class="sectionTiles heightWindow shadowWhite">
-            <h1 class="tileHome work aboutMe">Contact</h1>
+        <section id="contactAnchor" class="heightWindow">
+            <h1 class="work aboutMe">Contact</h1>
             <form id="gform" method="POST" class="full" action="https://script.google.com/macros/s/AKfycbw3OqF_yQ8S1gdTuYfLyZzbsuCunk3iZi0sjvdwcARh_XocHwjt/exec">
                 <fieldset>
                     <label for="name">Name: </label>
@@ -207,13 +188,10 @@
             <div class="full" style="display:none;" id="thankyou_message">
                 <p>Message sent. Expect a response shortly.</p>
             </div>
-            <!-- Submit the Form to Google Using "AJAX" -->
+            <!-- submit the form using AJAX -->
             <script data-cfasync="false" type="text/javascript" src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
         </section>
-
         <!-- InstanceEndEditable -->
-    </div>
+</div>
 </body>
-<!-- InstanceEnd -->
-
-</html>
+<!-- InstanceEnd --></html>
