--- a/soundscapesII/index.html
+++ b/soundscapesII/index.html
@@ -10,11 +10,13 @@
 	<!--Typekit-->
 	<script src="https://use.typekit.net/ftq0ggh.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+  	<!--JS-->
+  	<script src="../js/main.js" type="text/javascript"></script>
   	<!--CSS-->
    	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   	<link rel="stylesheet" href="../css/main.css"/>
    	<link rel="stylesheet" href="../css/loading.css"/>
    	<link rel="stylesheet" href="../css/header.css"/>
-   	<link rel="stylesheet" href="../css/main.css"/>
     <!--Favicon-->
     <link rel="shortcut icon" href="images/favicon.png" type="image/png"/>
     <!--Google analytics-->
@@ -45,43 +47,31 @@
 	
 </head>
 <body>
-<div id="header" class="shadowWhite">
+<header>
 	<div id="topDesktop">
 		<div id="topMobile">
-			<a href="../index.html" id="pageName">Darin E. Reyes Design</a>
-   			<a id="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></a>
+			<a href="../index.html" class="button" id="pageName">Darin E. Reyes Design</a>
+   			<a class="button" id="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></a>
    		</div>
    		<nav id="tabs">
-        	<a sort="work" href="../index.html#work">Work</a>
-        	<a sort="aboutMe" href="../index.html#aboutMe">About Me</a>
-<!--        <a id="resume">Resume</a>-->
-        	<a sort="contact" href="../index.html#contact">Contact</a>
-        	<a sort="all" href="../index.html#all">All</a>
+        	<a class="button" sort="work" href="../index.html#work">Work</a>
+        	<a class="button" sort="aboutMe" href="../index.html#aboutMe">About Me</a>
+        	<a class="button" sort="contact" href="../index.html#contact">Contact</a>
+        	<a class="button" sort="all" href="../index.html#all">All</a>
     	</nav>
 	</div>
-<!--   	<div>-->
-<!--
-    	<nav id="tabs">
-        	<a sort="work" href="../index.html#work">Work</a>
-        	<a sort="aboutMe" href="../index.html#aboutMe">About Me</a>
-        <a id="resume">Resume</a>
-        	<a sort="contact" href="../index.html#contact">Contact</a>
-        	<a sort="all" href="../index.html#all">All</a>
-    	</nav>
--->
-    	<nav id="social" class="colQuarter">
-        	<a href="http://facebook.com/dereyesdesign">
+    	<nav id="social">
+        	<a class="button" href="http://facebook.com/dereyesdesign">
         		<i class="fa fa-facebook-official"></i>
         	</a>
-        	<a href="http://instagram.com/dereyesdesign">
+        	<a class="button" href="http://instagram.com/dereyesdesign">
         		<i class="fa fa-instagram"></i>
         	</a>
-        	<a href="https://twitter.com/dereyesdesign">
+        	<a class="button" href="https://twitter.com/dereyesdesign">
         		<i class="fa fa-twitter"></i>
         	</a>
     	</nav>
-<!--    </div>-->
-</div>
+</header>
 <div id="content">
    <section id="loading">
 		<img src="../images/loading.gif">
@@ -115,7 +105,7 @@
    		<p class="caption">What the user would see inside the VR goggles</p>
     </article>
     <!-- InstanceEndEditable -->
-    <article>
+    <article id="clickouts">
 		<a class="button" href="../index.html">Home</a>
 	</article>	
 	
