Added fishy flop page, disabled vimeo autoplay

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- InstanceBeginEditable name="Content" -->
         <!--Content here-->
         <section id="top" class="intro widthWindow">
-            <iframe class="aspect16x9" src="https://player.vimeo.com/video/243570108?autoplay=1" width="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe class="aspect16x9" src="https://player.vimeo.com/video/243570108" width="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             <p>“Thank You” to everyone who made <a href="gato/index.html">Gato</a> possible.</p>
             <p>I'm a Visual Designer and Creative Coder living in Sacramento, California.</p>
             <p>I use <b>light, sound, and code</b> to connect humans.</p>
@@ -116,6 +116,7 @@
                 <h3>University of California, Davis</h3>
                 <p>BA in Design, Graphics /Interactive Emphasis</p>
             </article>
+            <article class="work projectData" projectTag="fishyFlop"></article>
             <article class="work projectData" projectTag="arirang"></article>
             <article class="aboutMe recognition">
                 <div class="node"></div>
