--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -1,148 +1,123 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="en"><!-- InstanceBegin template="/Templates/projects.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fishy Flop</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/app.css">
+	<meta charset="utf-8">
+	<title>Darin E. Reyes</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--Libraries-->
+	<!--jQuery-->
+    <script type="text/javascript" src="../lib/jquery-3.2.1.min.js"></script>
+	<!--Typekit-->
+	<script src="https://use.typekit.net/ftq0ggh.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+  	<!--JS-->
+  	<script src="../js/main.js" type="text/javascript"></script>
+  	<!--CSS-->
+   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   	<link rel="stylesheet" href="../css/main.css"/>
+   	<link rel="stylesheet" href="../css/loading.css"/>
+   	<link rel="stylesheet" href="../css/header.css"/>
+    <!--Favicon-->
+    <link rel="shortcut icon" href="../gato/images/favicon.png" type="image/png"/>
+    <!--Google analytics-->
+    <script>
+        console.log('analytics');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-85708609-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+	<!--Space for extra scripts-->
+	
+	<!--Make this uneditable with  -->
+	<link rel="stylesheet" href="../css/project.css"/>
+	<script type="text/javascript" src="../js/projects.js"></script>
+	<!-- InstanceBeginEditable name="subHead" -->
+	
+	<!-- InstanceEndEditable -->
+	
 </head>
-
 <body>
-
-    <nav class="navbar navbar-fixed-top navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li class="col-sm-2 col-sm-offset-1">
-                        <a href="#top">About</a>
-                    </li>
-                    <li class="col-sm-2">
-                        <a href="#engage">Download</a>
-                    </li>
-                    <img class="col-sm-2" src="images/logo.png" alt="logo">
-                    <li class="col-sm-2">
-                        <a href="#team">The Team</a>
-                    </li>
-                    <li class="col-sm-2">
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container-fluid">
-        <section id="top" class="row">
-            <div class="col-sm-10 col-sm-offset-1">
-                <div class="col-xs-12">
-                    <h1><a href="#">Fishy Flop</a> is a fin-tastic mobile game by <a href="#team">The Fishy Flop Team</a>.</h1>
-                    <br>
-                    <p>It’s like QWOP meets Angry Birds meets not being able to breathe air.</p>
-                    <p>It’s currently in closed beta on Google Play.</p>
-                    <p><a href="https://twitter.com/fishyflopteam">Follow us on Twitter <i class="fa fa-twitter"></i></a></p>
-                </div>
-            </div>
-        </section>
-
-        <section id="engage" class="row whiteBG">
-            <!--            <div class="col-sm-10 col-sm-offset-1">-->
-            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 card">
-                <div class="col-sm-6">
-                    <img src="images/dancingFish.gif" alt="App icon" width="100%">
-                </div>
-                <div class="col-sm-6">
-                    <h2><a href="https://play.google.com/store/apps/details?id=com.WouldBeCool.FishyFlop"> Download the app from Google play</a></h2>
-                    <!--
-                    <form>
-                        <fieldset class="form-group">
-                            <p>Your name:</p>
-                            <input type="text" class="form-control" id="testerName">
-                            <br>
-                            <p>Your email address:</p>
-                            <input type="email" class="form-control" id="testerEmail">
-                            <small id="emailHelp" class="form-text text-muted">(We will never share your email address with anyone)</small>
-                            <br>
-                            <br>
-                        </fieldset>
-                        <button type="submit" class="btn btn-default" onclick="testerSubmit()">Submit</button>
-                    </form>
--->
-                </div>
-            </div>
-            <!--            </div>-->
-        </section>
-
-        <section id="team" class="row shadow blueBG whiteText">
-            <div class="col-lg-8 col-lg-offset-2">
-                <div class="col-xs-12">
-                    <h2>The Team</h2>
-                    <br>
-                </div>
-                <div class="profile col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-lg-4 col-lg-offset-0">
-                    <img src="images/computer.png" alt="App icon" width="100%">
-                    <h3><a href="https://www.linkedin.com/in/brian-mah-633b39126/">Brian Mah</a></h3>
-                    <p>Lead Developer</p>
-                </div>
-                <div class="profile col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-2 col-lg-4 col-lg-offset-0">
-                    <img src="images/counter2.png" alt="App icon" width="100%">
-                    <h3><a href="https://www.linkedin.com/in/alex-jungroth-561282112/">Alex Jungroth</a></h3>
-                    <p>Developer</p>
-                </div>
-                <div class="profile col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-lg-4 col-lg-offset-0">
-                    <img src="images/bgPaintingVincent1.png" alt="App icon" width="100%">
-                    <h3><a href="#">Daniel Schlesinger</a></h3>
-                    <p>Developer</p>
-                </div>
-                <div class="profile col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-2 col-lg-4 col-lg-offset-0">
-                    <img src="images/stuff2.png" alt="App icon" width="100%">
-                    <h3><a href="https://jordanhmusic.com/">Jordan Henderson</a></h3>
-                    <p>Music, Audio</p>
-                </div>
-                <div class="profile col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-lg-4 col-lg-offset-0">
-                    <img src="images/bgPaintingFrida.png" alt="App icon" width="100%">
-                    <h3><a href="http://derey.es">Darin E. Reyes</a></h3>
-                    <p>Visuals</p>
-                </div>
-            </div>
-        </section>
-
-        <section id="contact" class="row">
-            <div class="col-sm-10 col-sm-offset-1">
-                <div class="col-xs-12">
-                    <h1>Get in Touch</h1>
-                    <form>
-                        <div class="form-group">
-                            <p>Your name:</p>
-                            <input type="text" class="form-control" id="contactName">
-                        </div>
-                        <div class="form-group">
-                            <p>Your email address:</p>
-                            <input type="email" class="form-control" id="contactEmail">
-                        </div>
-                        <div class="form-group">
-                            <p>Your message:</p>
-                            <textarea class="form-control" rows="5" id="contactMessage"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-default" onclick="contactSubmit()">Submit</button>
-                    </form>
-                </div>
-            </div>
-        </section>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
+<header>
+	<div id="topDesktop">
+		<div id="topMobile">
+			<a href="../index.html" class="button" id="pageName">Darin E. Reyes Design</a>
+   			<a class="button" id="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></a>
+   		</div>
+   		<nav id="tabs">
+        	<a class="button" sort="work" href="../index.html#work">Work</a>
+        	<a class="button" sort="aboutMe" href="../index.html#aboutMe">About Me</a>
+        	<a class="button" sort="contact" href="../index.html#contact">Contact</a>
+        	<a class="button" sort="all" href="../index.html#all">All</a>
+    	</nav>
+	</div>
+    	<nav id="social">
+        	<a class="button" href="http://facebook.com/dereyesdesign">
+        		<i class="fa fa-facebook-official"></i>
+        	</a>
+        	<a class="button" href="http://instagram.com/dereyesdesign">
+        		<i class="fa fa-instagram"></i>
+        	</a>
+        	<a class="button" href="https://twitter.com/dereyesdesign">
+        		<i class="fa fa-twitter"></i>
+        	</a>
+    	</nav>
+</header>
+<div id="content">
+   <section id="loading">
+		<img src="../images/loading.gif">
+	</section>
+    
+    <!--Make this uneditable with  -->
+    <!-- InstanceBeginEditable name="subContent" -->
+    <article class="projectData" projectTag="fishyFlop"></article>
+	<article>
+		<h2>Concept</h2>
+		<p><i>Fishy Flop</i> is a fin-tastic mobile game by The Fishy Flop Team. The game combines the physics of games like <i>Angry Birds</i> with the quirky controls of games like <i>QWOP</i>.</p>
+		<p>I ensured that the game featured intuitive interfaces and vibrant, contemporary visuals.</p>
+	</article>
+  	<article>
+		<h2>The Fishy Flop Team</h2>
+		<ul>
+			<li><a href="https://www.linkedin.com/in/brian-mah-633b39126/">Brian Mah</a>, Lead Developer</li>
+			<li><a href="https://www.linkedin.com/in/alex-jungroth-561282112/">Alex Jungroth</a>, Developer</li>
+			<li>Daniel Schlesinger, Developer</li>
+			<li><a href="https://jordanhmusic.com/">Jordan Henderson</a>, Music, Audio</li>
+			<li>Me, Visuals and Interfaces</li>
+		</ul>
+	</article>
+   	<article>
+   		<h2>Samples</h2>
+   		
+   		<img src="images/1.jpg" alt="world 1 assets">
+   		<img src="images/2.jpg" alt="world 1 assets">
+   		<i class="fa fa-caret-up" aria-hidden="true"></i>
+   		<p class="caption">Two styles were established to differentiate background and foreground elements.</p>
+   		<img src="images/3.jpg" alt="ui assets">
+   		<img src="images/5.jpg" alt="world 1 assets">
+   		<img src="images/4.jpg" alt="world 2 assets">
+   		<img src="images/7.jpg" alt="world 2 assets">
+   		<img src="images/6.jpg" alt="world 2 assets">
+   		<img src="images/8.jpg" alt="world 2 assets">
+   		<img src="images/9.jpg" alt="world 2 assets">
+   		<img src="images/10.jpg" alt="world 2 assets">
+   		<i class="fa fa-caret-up" aria-hidden="true"></i>
+   		<p class="caption">Many elements were designed to be seamlessly tiled.</p>
+    </article>
+    <!-- InstanceEndEditable -->
+    <article id="clickouts">
+		<a class="button" href="../index.html">Home</a>
+	</article>	
+	
+</div>
 </body>
-
-</html>
+<!-- InstanceEnd --></html>
