Update upcoming shows

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         <h1>Upcoming <i class="fa fa-caret-down" aria-hidden="true"></i></h1>
       </div>
       <div class="tileText">
-        <p>4/19<br>Concert visualization<br>w/ The Hot Baked Goods<br>Crocker Art Museum, Sacramento, CA</p>
-        <a class="button" href="https://www.crockerart.org/event/1560/2018-04-19">Tickets</a>
+        <p>5/5<br>Interactive installation<br>w/ Respect the Funk<br>Shabang music festival,<br>San Luis Obispo, CA</p>
+        <a class="button" href="https://www.shabangslo.com/">Tickets</a>
       </div>
     </section>
     <section class="tiles">
