Rephrase about paragraph

--- a/about/index.html
+++ b/about/index.html
@@ -23,9 +23,9 @@
   <!--Google analytics-->
   <script>
     console.log('analytics');
-    (function(i, s, o, g, r, a, m) {
+    (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
-      i[r] = i[r] || function() {
+      i[r] = i[r] || function () {
         (i[r].q = i[r].q || []).push(arguments)
       }, i[r].l = 1 * new Date();
       a = s.createElement(o),
@@ -59,14 +59,14 @@
 
       <div class='tileText col-100 row-auto p-b-0'>
         <a href='index.html'>
-                    <img src='images/catface.png' id='catface'>
-                </a>
+          <img src='images/catface.png' id='catface'>
+        </a>
       </div>
     </section>
     <section class="tiles">
       <div class="tileText col-100">
         <h1>About me</h1>
-        <p>Darin was born in Los Angeles, California. He graduated from Los Angeles Mission College with an AA in Art in 2014 and graduated with a BA in Design from UC Davis in 2016.</p>
+        <p>Darin was born in Los Angeles, California. He graduated from Los Angeles Mission College with an AA in Art in 2014 and graduated from UC Davis with a BA in Design in 2016.</p>
         <p>He has been recognized for his <a href="https://2018.sfdesignweek.org/2016-enrichment-scholarship-winners/">“clean, smart design solutions with well-researched foundations”, “ability to transform personal stories into useful tools”</a>, and <a href="http://www.ladancechronicle.com/joe-kye-ching-ching-wong-launch-their-international-tour-at-navel-la/"> “visual magic”.</a></p>
 
         <table>
@@ -177,16 +177,16 @@
         <a class="button button-cyan" href="contact/index.html">Contact</a>
 
         <a class="button" href="https://www.facebook.com/dereyesdesign">
-                    <i class="fa fa-facebook-official"></i>
-                </a>
+          <i class="fa fa-facebook-official"></i>
+        </a>
 
         <a class="button" href="https://www.instagram.com/dereyesdesign/">
-                    <i class="fa fa-instagram"></i>
-                </a>
+          <i class="fa fa-instagram"></i>
+        </a>
 
         <a class="button" href="https://twitter.com/dereyesdesign">
-                    <i class="fa fa-twitter"></i>
-                </a>
+          <i class="fa fa-twitter"></i>
+        </a>
       </div>
     </section>
   </div>
