Change 'About me' to 'About'

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
   <base href="../" />
 
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Darin E. Reyes / About Me</title>
+  <title>Darin E. Reyes / About</title>
   <!--libs-->
   <!--jquery-->
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
@@ -65,7 +65,7 @@
     </section>
     <section class="tiles">
       <div class="tileText col-100">
-        <h1>About me</h1>
+        <h1>About</h1>
         <p>Darin was born in Los Angeles, California. He graduated from Los Angeles Mission College with an AA in Art in 2014 and graduated from UC Davis with a BA in Design in 2016.</p>
         <p>He has been recognized for his <a href="https://2018.sfdesignweek.org/2016-enrichment-scholarship-winners/">“clean, smart design solutions with well-researched foundations”, “ability to transform personal stories into useful tools”</a>, and <a href="http://www.ladancechronicle.com/joe-kye-ching-ching-wong-launch-their-international-tour-at-navel-la/"> “visual magic”.</a></p>
 
@@ -172,7 +172,7 @@
 
         <a class="button button-pink" href="index.html">Work</a>
 
-        <a class="button button-green" href="about/index.html">About me</a>
+        <a class="button button-green" href="about/index.html">About</a>
 
         <a class="button button-cyan" href="contact/index.html">Contact</a>
 
