--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -147,7 +147,7 @@
 
         <a class="button button-pink" href="index.html">Work</a>
 
-        <a class="button button-green" href="about/index.html">About me</a>
+        <a class="button button-green" href="about/index.html">About</a>
 
         <a class="button button-cyan" href="contact/index.html">Contact</a>
 
