New pics and videos

--- a/arirang/index.html
+++ b/arirang/index.html
@@ -71,9 +71,7 @@
 
         <h1>Arirang Visualization</h1>
         <p>Live interactive concert visuals</p>
-        <div class='video video-16x9'><iframe src='https://www.youtube.com/embed/u4dnh7r_6Wg' frameborder='0' allowfullscreen></iframe></div>
-        <i class='fa fa-caret-up' aria-hidden='true'></i>
-        <p class='caption'>A video of the performance on June 10, 2016.</p>
+        <img src='arirang/images/2.jpg'>
         <table>
           <tr>
             <td>
@@ -117,6 +115,9 @@
         <p>Joe and I met while I was collaborating on a visualization with Jiayi and Shih-Wen Young for a different song. Above is a video of us testing my code for that project. A week before the performance, I was charged with developing the visuals for “Arirang” on my own.</p>
         <img src="arirang/images/1.jpg" alt="The spritesheet used in the visualization">
         <p>The visualization combined pre-rendered sprites created in Adobe Illustrator with elements generated live within Processing. Each element was created or modified using audio input from Joe's performance.</p>
+        <div class='video video-16x9'><iframe src='https://www.youtube.com/embed/u4dnh7r_6Wg' frameborder='0' allowfullscreen></iframe></div>
+        <i class='fa fa-caret-up' aria-hidden='true'></i>
+        <p class='caption'>A video of the performance on June 10, 2016.</p>
         <p>Joe had heard the folk song as a child, when his mother would hum it as she carried him on her back. The project gave us an opportunity to learn more about the song's history and significance, which helped us add meaning to the performance and visualization.</p>
       </div>
       <div class="tileText col-100 row-auto">
