--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
   </section>
   <div id="content">
     <section class="tiles">
-
+        <div class="tileText col-100">
+            <div class='video video-16x9'><iframe src='https://player.vimeo.com/video/278603739' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+        </div>
       <div class='tileText col-100 row-auto p-b-0'>
         <a href='index.html'>
       <img src='images/catface.png' id='catface'>
